--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>org.example</groupId>
   <artifactId>drools-test</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>kjar</packaging>
-
   <name>drools-test</name>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.release>11</maven.compiler.release>
-    <drools-version>8.39.0.Final</drools-version>
-    <slf4j-version>1.7.30</slf4j-version>
-    <junit-version>4.13.1</junit-version>
-    <logback-version>1.2.9</logback-version>
+    <maven.compiler.release>21</maven.compiler.release>
+    <drools-version>8.44.0.Final</drools-version>
+    <slf4j-version>1.7.36</slf4j-version>
+    <junit-version>4.13.2</junit-version>
+    <logback-version>1.2.12</logback-version>
   </properties>
-
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -29,14 +25,11 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-
   <dependencies>
-
     <dependency>
       <groupId>org.drools</groupId>
       <artifactId>drools-ruleunits-engine</artifactId>
     </dependency>
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -49,13 +42,20 @@
       <version>${logback-version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.kie</groupId>
+      <artifactId>kie-ci</artifactId>
+      <version>${drools-version}</version>
+    </dependency>
   </dependencies>
-
   <build>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.11.0</version>
+        <configuration>
+          <release>21</release>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.kie</groupId>
@@ -64,6 +64,5 @@
         <extensions>true</extensions>
       </plugin>
     </plugins>
-
   </build>
 </project>
